--- a/movieflix/package.json
+++ b/movieflix/package.json
@@ -1,7 +1,7 @@
 {
   "name": "movieflix",
   "version": "0.1.0",
-  "homepage": "https://GauravNeo1.github.io/movieflix",
+  "homepage": "https://gauravneo1.github.io/movieflix",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
